Fix header image on mobile
Adjusting section height to fit image + text without extra space.

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -127,7 +127,7 @@ ul li {
   background-repeat: no-repeat;
   
   @include tablet {
-    height: 102vh;
+    height: 150vw;
     background-size: 200%;
   }
 }
